Fix modal spacing bug

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ html {
     padding-right: 2.8rem;
   }
 
+  .m-push-0 {
+    margin-bottom: 0;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
