--- a/css/modal.css
+++ b/css/modal.css
@@ -13,6 +13,8 @@
   position: absolute;
   background-color: #121212;
   box-shadow: 0 2px 25px rgba(0, 0, 0, .4);
+  width: 90%;
+  max-width: 38rem;
 }
 
 .i-showicons {
